--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
   <header>
     <h1>Spectors Premier League - Standings</h1>
-    <p>Season 1 | Inspired by ICC World Cup 2023</p>
+    <p>Season 1 | Group Stage</p>
   </header>
   <nav id="groupButtons"></nav>
   <table id="standingsTable">
