--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </tbody>
   </table>
   <script>
-  const API_BASE = 'https://767ef729-5e14-4e6a-a039-2b095606745e-00-132ci6akf1tqt.sisko.replit.dev/api/standings';
+  const API_BASE = 'http://212.132.120.102:13968/api/standings';
   const groups = ['A', 'B', 'C', 'D'];
   const buttonsContainer = document.getElementById('groupButtons');
   const tableBody = document.getElementById('tableBody');
