--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </tbody>
   </table>
   <script>
-  const API_BASE = 'http://212.132.120.102:13968/api/standings';
+  const API_BASE = 'https://148.113.24.0:5000/api/standings';
   const groups = ['A', 'B', 'C', 'D'];
   const buttonsContainer = document.getElementById('groupButtons');
   const tableBody = document.getElementById('tableBody');
