--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </tbody>
   </table>
   <script>
-  const API_BASE = 'https://leaguebot.duckdns.org/api/standings';
+  const API_BASE = 'https://spectorsleague.duckdns.org/api/standings';
   const groups = ['A', 'B', 'C', 'D'];
   const buttonsContainer = document.getElementById('groupButtons');
   const tableBody = document.getElementById('tableBody');
