--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </tbody>
   </table>
   <script>
-  const API_BASE = 'https://spl-api-pi.vercel.app/api/standings';
+  const API_BASE = 'https://spl-api-beta.vercel.app';
   const groups = ['A', 'B', 'C', 'D'];
   const buttonsContainer = document.getElementById('groupButtons');
   const tableBody = document.getElementById('tableBody');
