--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
       tableBody.innerHTML = data.map((team, index) => `
         <tr>
           <td>${index + 1}</td>
-          <td>${team.fullname || '—'}</td>
-          <td>${team.matches_played ?? 0}</td>
-          <td>${team.wins ?? 0}</td>
-          <td>${team.losses ?? 0}</td>
+          <td>${team.team || '—'}</td>
+          <td>${team.played ?? 0}</td>
+          <td>${team.won ?? 0}</td>
+          <td>${team.lost ?? 0}</td>
           <td>${team.points ?? 0}</td>
         </tr>
       `).join('');
